@@ -8,7 +8,7 @@
 
     <package name="msys-gettext">
       <affiliate group="MSYS System Builder" />
-      <description lang="en" title="gettext (msys): GNU Internationalization Library and Utilities" >
+      <description lang="en" title="gettext (msys): GNU Internationalization Library and Utilities">
         <paragraph>This is not the gettext you are looking for.</paragraph>
         <paragraph>GNU gettext provides a set of tools that create a
           framework to help other GNU packages produce multi-lingual
@@ -47,26 +47,22 @@
       <licence tarname="gettext-%-msys-%-lic.tar" />
 
       <component class="bin">
-        <release tarname="gettext-0.17-1-msys-1.0.11-bin.tar.lzma" />
-        <release tarname="gettext-0.17-2-msys-1.0.13-bin.tar.lzma" >
+        <release tarname="gettext-0.17-2-msys-1.0.13-bin.tar.lzma">
           <requires eq="msys-libintl-%-msys-%-dll-8.tar" />
           <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
         </release>
       </component>
 
       <component class="doc">
-        <release tarname="gettext-0.17-1-msys-1.0.11-doc.tar.lzma" />
         <release tarname="gettext-0.17-2-msys-1.0.13-doc.tar.lzma" />
       </component>
 
       <component class="lic">
-        <release tarname="gettext-0.17-1-msys-1.0.11-lic.tar.lzma" />
         <release tarname="gettext-0.17-2-msys-1.0.13-lic.tar.lzma" />
       </component>
 
       <component class="dev">
-        <release tarname="gettext-0.17-1-msys-1.0.11-dev.tar.lzma" />
-        <release tarname="gettext-0.17-2-msys-1.0.13-dev.tar.lzma" >
+        <release tarname="gettext-0.17-2-msys-1.0.13-dev.tar.lzma">
           <requires eq="msys-libgettextpo-%-msys-%-dll-0.tar" />
           <requires eq="msys-libintl-%-msys-%-dll-8.tar" />
           <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
@@ -76,14 +72,13 @@
       </component>
 
       <component class="ext">
-        <release tarname="gettext-0.17-1-msys-1.0.11-ext.tar.lzma" />
         <release tarname="gettext-0.17-2-msys-1.0.13-ext.tar.lzma" />
       </component>
     </package>
 
     <package name="msys-libintl">
       <affiliate group="MSYS System Builder" />
-      <description lang="en" title="libintl (msys): GNU Internationalization Runtime Library" >
+      <description lang="en" title="libintl (msys): GNU Internationalization Runtime Library">
         <paragraph>This is not the libintl you are looking for.</paragraph>
         <paragraph>GNU gettext provides a set of tools that create a
           framework to help other GNU packages produce multi-lingual
@@ -123,15 +118,16 @@
       <licence tarname="gettext-%-msys-%-lic.tar" />
 
       <component class="dll">
-        <release tarname="libintl-0.17-2-msys-dll-8.tar.lzma" />
+        <release tarname="libintl-0.17-2-msys-dll-8.tar.lzma">
+          <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
+        </release>
         <requires eq="msys-core-*-msys-*-bin.tar" />
-        <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
       </component>
     </package>
 
     <package name="msys-libgettextpo">
       <affiliate group="MSYS System Builder" />
-      <description lang="en" title="libgettextpo (msys): GNU Internationalization Utility Library" >
+      <description lang="en" title="libgettextpo (msys): GNU Internationalization Utility Library">
         <paragraph>This is not the libgettextpo you are looking for.</paragraph>
         <paragraph>GNU gettext provides a set of tools that create a
           framework to help other GNU packages produce multi-lingual
@@ -173,17 +169,18 @@
       <licence tarname="gettext-%-msys-%-lic.tar" />
 
       <component class="dll">
-        <release tarname="libgettextpo-0.17-2-msys-dll-0.tar.lzma" />
+        <release tarname="libgettextpo-0.17-2-msys-dll-0.tar.lzma">
+          <requires eq="msys-libintl-%-msys-%-dll-8.tar" />
+          <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
+          <requires eq="msys-libtermcap-*-msys-*-dll-0.tar.lzma" />
+        </release>
         <requires eq="msys-core-*-msys-*-bin.tar" />
-        <requires eq="msys-libintl-%-msys-%-dll-8.tar" />
-        <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
-        <requires eq="msys-libtermcap-*-msys-*-dll-0.tar.lzma" />
       </component>
     </package>
 
     <package name="msys-libasprintf">
       <affiliate group="MSYS System Builder" />
-      <description lang="en" title="libasprintf (msys): GNU Internationalization Utility Library" >
+      <description lang="en" title="libasprintf (msys): GNU Internationalization Utility Library">
         <paragraph>This is not the libasprintf you are looking for.</paragraph>
         <paragraph>GNU gettext provides a set of tools that create a
           framework to help other GNU packages produce multi-lingual
