@@ -57,8 +57,9 @@
       </component>
 
       <component class="dev">
-        <release tarname="libregex-1.20090805-2-msys-1.0.13-dev.tar.lzma" />
-        <requires eq="msys-libregex-%-msys-%-dll-1.tar" />
+        <release tarname="libregex-1.20090805-2-msys-1.0.13-dev.tar.lzma">
+          <requires eq="msys-libregex-%-msys-%-dll-1.tar" />
+        </release>
       </component>
     </package>
 
